@@ -1,3 +1,7 @@
+= master
+
+* Make heartbeat plugin compatible with recent changes in the rack master branch (jeremyevans)
+
 = 3.57.0 (2022-06-14)
 
 * Make static_routing plugin depend on the hash_paths instead of the hash_routes plugin (jeremyevans)
